src/test/deca/syntax/valid/provided/perso/if_inc.deca
{
      int x = 6;
      boolean estVrai = true;
      if (estVrai && !(true)){
           x = x+1;
       }
      else {
           x = x-1;
       }
      println(x);
      // sortie 5
}