src/test/deca/syntax/invalid/provided/parentheses_manquantes.deca
{
    if x == 5
        print("Yes");
}
